<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Spin wheel - Angel Decision</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="agree_dialog">Agree</string>
    <string name="add_record">Add Record</string>
    <string name="select_language">Select language</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="font_italic" translatable="false">fonts/Roboto-BlackItalic.ttf</string>
    <string name="font_bold" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="font_regular" translatable="false">fonts/Roboto-Regular.ttf</string>
    <string name="font_black" translatable="false">fonts/Roboto-Black.ttf</string>
    <string name="font_medium" translatable="false">font/Roboto-Medium.ttf</string>
    <string name="txt_language_in" translatable="false">Indonesian</string>
    <string name="txt_language_thai" translatable="false">Thai</string>
    <string name="txt_language_malay" translatable="false">Malaysian</string>
    <string name="txt_language_en">English</string>
    <string name="txt_language_vi">Vietnamese</string>
    <string name="txt_language_spanish">Spanish</string>
    <string name="txt_language_portuguese">Portuguese</string>
    <string name="txt_language_russiane">Russian</string>
    <string name="txt_language_ja">Japanese</string>
    <string name="txt_language_korean">Korean</string>
    <string name="txt_language_french">French</string>
    <string name="txt_language_german">German</string>
    <string name="txt_language_arabic" translatable="false">Arabic</string>
    <string name="txt_language_chi">Chinese</string>
    <string name="txt_language_chinese_Simplified" translatable="false">Chinese (Simplified )</string>
    <string name="txt_language_chinese_Traditional" translatable="false">Chinese (Traditional)</string>
    <string name="onboard_title_1">Make your angel decision</string>
    <string name="onboard_content_1">There are numerous options for filling up the spin wheel option.</string>
    <string name="onboard_title_2">Funniest spin</string>
    <string name="onboard_content_2">A gamification popup includes a fortune wheel or gamification methods to entertain the customers.</string>
    <string name="onboard_title_3">Create surprising result</string>
    <string name="onboard_content_3">Using the wheelie helps you to get prominent results in turn.</string>
    <string name="skip">Skip</string>
    <string name="lever">Level</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="open">Open</string>
    <string name="search_here">Search here</string>
    <string name="or">OR</string>
    <string name="browse">Browse</string>
    <string name="copy">Copy</string>
    <string name="check">Check</string>
    <string name="copy_to_clib_board">Save to clip board</string>
    <string name="language">Language</string>
    <string name="privacy">Privacy</string>
    <string name="about_app">About App</string>
    <string name="title_privacy">We built the Spin wheel app as a Free app.</string>
    <string name="content_privacy">This SERVICE is provided by Us at no cost and is intended for use as is.
This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
If you choose to use my Service, then you agree to the collection and use of information in relation to this policy.
The Personal Information that I collect is used for providing and improving the Service.I will not use or share your information with anyone except as described in this Privacy Policy.
- Images: We are not responsible for the image content created by users or searched on the internet.
- Stories: User-generated stories in the app for political, offensive, or deceptive purposes.
- We are not responsible when users of the application for malicious purposes, political purposes, vote, and violate applicable national laws.
1. Information Collection and Use
For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information.The information that I request will be retained on your device and is not collected by me in any way.
The app does use third party services that may collect information used to identify you.
Links to the privacy policies of third party service providers can be used in the app

2. Log Data
I want to inform you that whenever you use my Service, in case of an error in the app I collect data and information (through third party products) on your phone called Log Data.
This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.

3. Cookies
Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.
These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.
This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services.
You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

4. Service Providers
The permissions we use in the application:
android.permission.WRITE_EXTERNAL_STORAGE

android.permission.READ_EXTERNAL_STORAGE

android.permission.WAKE_LOCK

android.permission.VIBRATE

android.permission.INTERNET

android.permission.ACCESS_NETWORK_STATE

android.permission.RECEIVE_BOOT_COMPLETED

NOTE:
- We are committed to using the above rights only for the purpose of serving the function of the application and fully comply with the policies of google play and not for any other purpose.

- All information provided by users will only be stored on their device and we do not collect and store it in any form (including on servers or on cloud services...).

- We do not disclose, store or share any sensitive information of users (email, bank account...).

- Any questions or complaints please contact us via email: support@outlookdaily.co

5. Service Providers
I may employ third-party companies and individuals due to the following reasons:
To facilitate our Service;

To provide the Service on our behalf;

To perform Service-related services;
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information.
The reason is to perform the tasks assigned to them on our behalf.However, they are obligated not to disclose or use the information for any other purpose.

6. Security
I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.
But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.

7. Links to Other Sites
This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site.
Note that these external sites are not operated by me.Therefore, I strongly advise you to review the Privacy Policy of these websites.

I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

8. Children’s Privacy
These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13.
In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers.
If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to take necessary actions.

9. Changes to This Privacy Policy
I may update our Privacy Policy from time to time.Thus, you are advised to review this page periodically for any changes.
I will notify you of any changes by posting the new Privacy Policy on this page.These changes are effective immediately after they are posted on this page.

10. Contact Us
If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at support@outlookdaily.co
    </string>
    <string name="content_about_app">"Questions or feedback? We read every single email
Have suggestions? Please, feel free to reach us at support@outlookdaily.co
"</string>
    <string name="sent">Sent</string>
    <string name="the_word_you_searched">Please take a moment to rate the app. Thanks for your support!</string>
    <string name="loading_ads_text">Loading ads...</string>
    <string name="version">Version</string>
    <string name="guide">Guide</string>
    <string name="more_app">More App</string>
    <string name="rate_app">Rate App</string>
    <string name="feedback">Feedback</string>
    <string name="contac_us">Contac us</string>
    <string name="scan_text">Scan Text</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="scanned_text">Scanned text</string>
    <string name="no_image">No images have been scanned yet</string>
    <string name="delete">Delete</string>
    <string name="translate">Translate</string>
    <string name="speak">Speak</string>
    <string name="text">Text</string>
    <string name="photo">Photo</string>
    <string name="rename">Rename</string>
    <string name="empty_name">Name is invalid</string>
    <string name="we_will_absorb_and_upgrade_a_lot_more">We will absorb and upgrade a lot more! Thank you!</string>
    <string name="please_give_us_feedback">Please give us feedback</string>
    <string name="do_you_like_the_app">Do you like the app?</string>
    <string name="confirm_delete">You are deleting a file.\nThis file will disappear completely</string>
    <string name="delete_file">Delete File</string>
    <string name="duplicate_name">Name already exists, please choose another name</string>
    <string name="translate_to">Translate to</string>
    <string name="guide_info_1">Click the function button on top of the right side to create your content</string>
    <string name="guide_info_2">Click the “Content” section and choose your favorite topic option</string>
    <string name="guide_info_3">Click “Add” button to create more topics</string>
    <string name="guide_info_4">Scroll horizontally to choose your favorite spin. Click “+” button to add more answers from the wheel</string>
    <string name="guide_info_5">Click “Edit” button to edit your spin wheel content</string>
    <string name="loading_api">Getting the language for you</string>
    <string name="body_name_app">Tools, lifestyle</string>
    <string name="error_max_name">Maximum name is 15 character.</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="google_admob_app_id" translatable="false">ca-app-pub-6445739239297382~2703137382</string>
    <string name="content">Content</string>
    <string name="hint_edit_spin">Ex: Museum</string>
    <string name="spin_theme">Spin theme</string>
    <string name="add_content">Add Content</string>
    <string name="name_content">Name Content</string>
    <string name="error_character">Maximum of 14 characters</string>
    <string name="empty_view">Please add content at the\n button below</string>
    <string name="please_turn_on_the_network">Please turn on the network\n for a better experience</string>
    <string name="thank_for_your_response">Thanks for your response !</string>
</resources>