<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    android:orientation="vertical">

    <include layout="@layout/custom_action_bar" android:id="@+id/ll_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_about_app" />

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/app_name"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/title_privacy"
            android:textColor="@color/color_404040"
            android:textSize="@dimen/_15sdp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/rl_toolbar">

            <nat.pink.base.customView.ExtTextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_666666"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:text="@string/content_about_app"
                android:textSize="@dimen/_13sdp"
                android:lineSpacingMultiplier="1.1"
                app:textViewFontAssetName="@string/font_regular" />
        </ScrollView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/native_ads_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_14sdp" />

</LinearLayout>