<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_root"
    android:gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/bg_white_radius"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <nat.pink.base.customView.ExtTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:text="@string/name_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <nat.pink.base.customView.ExtEditText
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/bg_name_content_border"
            android:hint="@string/hint_edit_spin"
            android:padding="@dimen/_12sdp"
            android:maxLines="10"
            android:textColor="@color/black"
            android:textColorHint="@color/color_666666"
            android:textSize="@dimen/_14sdp" />

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center_horizontal"
            android:text="@string/error_character"
            android:textColor="@color/color_FF3B30"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_12sdp">

            <nat.pink.base.customView.ExtTextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_dialog_content_cancel"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/cancel_dialog"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <nat.pink.base.customView.ExtTextView
                android:id="@+id/txt_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_dialog_content"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>