<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:background="@drawable/bg_round_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/txt_translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/delete_file"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/edt_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp"
            android:gravity="center"
            android:text="@string/confirm_delete"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/_14sdp" />

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:textColor="#FF0000"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/gray_D9" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <nat.pink.base.customView.ExtTextView
                android:id="@+id/txt_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/cancel_dialog"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/_14sdp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/gray_D9" />

            <nat.pink.base.customView.ExtTextView
                android:id="@+id/txt_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="@dimen/_14sdp"
                android:text="@string/delete"
                android:textColor="@color/color_EA3354"
                android:textSize="@dimen/_14sdp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>