<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2c2956"
    android:orientation="vertical">

    <include
        android:id="@+id/action_bar"
        layout="@layout/item_action_bar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_white_radius"
        android:orientation="horizontal">

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_white_radius"
            android:inputType="text"
            android:hint="@string/hint_edit_spin"
            android:maxLength="24"
            android:maxLines="1"
            android:lines="1"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_666666"
            android:textSize="@dimen/_14sdp" />

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/txt_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_radius"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/color_9E9E9E"
            android:textSize="@dimen/_14sdp" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:src="@drawable/ic_edit_pen" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <nat.pink.base.customView.ExtTextView
        android:id="@+id/txt_spin_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_spin_theme_up"
        android:drawablePadding="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/spin_theme"
        android:textColor="@color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerImageSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@color/color_4D4C7C" />

    <nat.pink.base.customView.ExtTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/content"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <nat.pink.base.customView.ExtTextView
            android:id="@+id/txt_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/empty_view"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone" />
    </FrameLayout>


    <nat.pink.base.customView.ExtTextView
        android:id="@+id/txt_add_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bg_button_add_content"
        android:drawableStart="@drawable/ic_add_button"
        android:drawablePadding="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_50sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/add_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp" />

</androidx.appcompat.widget.LinearLayoutCompat>